# simple-tracker-rust-api

./: .env  .gitignore  Cargo.toml  README.md  catalog-info.yaml
.github/workflow/: rust.yml
src/: main.rs
src/api/: inventory_api.rs
src/models/: inventory_model.rs
src/repository/: mongodb_repo.rs
tests/: basic.rs  inventory_test.rs
